# cppgen

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
